--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -47,7 +47,9 @@ file.reference.stax-api-1.0.1.jar=lib/stax-api-1.0.1.jar
 file.reference.vecmath-1.3.1.jar=lib/vecmath-1.3.1.jar
 file.reference.wstx-asl-3.2.6.jar=lib/wstx-asl-3.2.6.jar
 includes=**
+jar.archive.disabled=${jnlp.enabled}
 jar.compress=false
+jar.index=${jnlp.enabled}
 javac.classpath=\
     ${file.reference.collections-generic-4.01.jar}:\
     ${file.reference.colt-1.2.0.jar}:\
@@ -89,11 +91,25 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
+jnlp.codebase.type=no.codebase
+jnlp.descriptor=application
+jnlp.enabled=false
+jnlp.mixed.code=default
+jnlp.offline-allowed=false
+jnlp.signed=false
+jnlp.signing=
+jnlp.signing.alias=
+jnlp.signing.keystore=
 main.class=iot.Iot
+# Optional override of default Codebase manifest attribute, use to prevent RIAs from being repurposed
+manifest.custom.codebase=
+# Optional override of default Permissions manifest attribute (supported values: sandbox, all-permissions)
+manifest.custom.permissions=
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
 platform.active=default_platform
+project.license=gpl20
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
