--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -31,6 +31,7 @@ endorsed.classpath=
 excludes=
 file.reference.collections-generic-4.01.jar=lib/collections-generic-4.01.jar
 file.reference.colt-1.2.0.jar=lib/colt-1.2.0.jar
+file.reference.commons-math3-3.3.jar=lib/commons-math3-3.3/commons-math3-3.3.jar
 file.reference.concurrent-1.3.4.jar=lib/concurrent-1.3.4.jar
 file.reference.j3d-core-1.3.1.jar=lib/j3d-core-1.3.1.jar
 file.reference.jung-3d-2.0.1.jar=lib/jung-3d-2.0.1.jar
@@ -55,10 +56,10 @@ javac.classpath=\
     ${file.reference.colt-1.2.0.jar}:\
     ${file.reference.concurrent-1.3.4.jar}:\
     ${file.reference.j3d-core-1.3.1.jar}:\
+    ${file.reference.jung-api-2.0.1.jar}:\
     ${file.reference.jung-3d-2.0.1.jar}:\
     ${file.reference.jung-3d-demos-2.0.1.jar}:\
     ${file.reference.jung-algorithms-2.0.1.jar}:\
-    ${file.reference.jung-api-2.0.1.jar}:\
     ${file.reference.jung-graph-impl-2.0.1.jar}:\
     ${file.reference.jung-io-2.0.1.jar}:\
     ${file.reference.jung-jai-2.0.1.jar}:\
@@ -67,7 +68,8 @@ javac.classpath=\
     ${file.reference.jung-visualization-2.0.1.jar}:\
     ${file.reference.stax-api-1.0.1.jar}:\
     ${file.reference.vecmath-1.3.1.jar}:\
-    ${file.reference.wstx-asl-3.2.6.jar}
+    ${file.reference.wstx-asl-3.2.6.jar}:\
+    ${file.reference.commons-math3-3.3.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -87,6 +89,9 @@ javadoc.noindex=false
 javadoc.nonavbar=false
 javadoc.notree=false
 javadoc.private=false
+javadoc.reference.commons-math3-3.3.jar=lib/commons-math3-3.3/commons-math3-3.3-javadoc.jar
+javadoc.reference.jung-api-2.0.1.jar=lib/jung2-2_0_1-apidocs.zip!/apidocs/
+javadoc.reference.jung-graph-impl-2.0.1.jar=http://jung.sourceforge.net/doc/api/index.html
 javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
@@ -108,7 +113,7 @@ manifest.custom.permissions=
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
-platform.active=default_platform
+platform.active=JDK_1.8
 project.license=gpl20
 run.classpath=\
     ${javac.classpath}:\
