--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -33,7 +33,9 @@ file.reference.collections-generic-4.01.jar=lib/collections-generic-4.01.jar
 file.reference.colt-1.2.0.jar=lib/colt-1.2.0.jar
 file.reference.commons-math3-3.3.jar=lib/commons-math3-3.3/commons-math3-3.3.jar
 file.reference.concurrent-1.3.4.jar=lib/concurrent-1.3.4.jar
+file.reference.hamcrest-all-1.3.jar=lib/test/hamcrest-all-1.3.jar
 file.reference.j3d-core-1.3.1.jar=lib/j3d-core-1.3.1.jar
+file.reference.jmockit.jar=lib/test/jmockit.jar
 file.reference.jung-3d-2.0.1.jar=lib/jung-3d-2.0.1.jar
 file.reference.jung-3d-demos-2.0.1.jar=lib/jung-3d-demos-2.0.1.jar
 file.reference.jung-algorithms-2.0.1.jar=lib/jung-algorithms-2.0.1.jar
@@ -44,6 +46,7 @@ file.reference.jung-jai-2.0.1.jar=lib/jung-jai-2.0.1.jar
 file.reference.jung-jai-samples-2.0.1.jar=lib/jung-jai-samples-2.0.1.jar
 file.reference.jung-samples-2.0.1.jar=lib/jung-samples-2.0.1.jar
 file.reference.jung-visualization-2.0.1.jar=lib/jung-visualization-2.0.1.jar
+file.reference.junit-4.11.jar=lib/test/junit-4.11.jar
 file.reference.stax-api-1.0.1.jar=lib/stax-api-1.0.1.jar
 file.reference.vecmath-1.3.1.jar=lib/vecmath-1.3.1.jar
 file.reference.wstx-asl-3.2.6.jar=lib/wstx-asl-3.2.6.jar
@@ -79,7 +82,10 @@ javac.source=1.8
 javac.target=1.8
 javac.test.classpath=\
     ${javac.classpath}:\
-    ${build.classes.dir}
+    ${build.classes.dir}:\
+    ${file.reference.hamcrest-all-1.3.jar}:\
+    ${file.reference.jmockit.jar}:\
+    ${file.reference.junit-4.11.jar}
 javac.test.processorpath=\
     ${javac.test.classpath}
 javadoc.additionalparam=
