--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -119,7 +119,7 @@ manifest.custom.permissions=
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
-platform.active=JDK_1.8
+platform.active=default_platform
 project.license=gpl20
 run.classpath=\
     ${javac.classpath}:\
