--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -74,7 +74,7 @@ javac.classpath=\
     ${file.reference.wstx-asl-3.2.6.jar}:\
     ${file.reference.commons-math3-3.3.jar}
 # Space-separated list of extra javac options
-javac.compilerargs=
+javac.compilerargs=-Xlint:unchecked 
 javac.deprecation=false
 javac.processorpath=\
     ${javac.classpath}
